# cuda-port-agent

./: CLAUDE.md  README.md
.claude/commands/: port-analyze.md  port-fix.md  port-profile.md  port-translate.md
done/nbody/hip/: CMakeLists.txt  bodysystem.h  bodysystemcpu_impl.h  bodysystemcuda.h  bodysystemcuda.hip  bodysystemcuda_impl.h  helper_cuda.h  helper_functions.h  helper_gl.h  nbody.cpp  paramgl.h  render_particles.cpp  tipsy.h
done/smokeParticles/hip/: CMakeLists.txt  GpuArray.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystem_cuda.hip  helper_hip.h  helper_math.h  particleDemo.cpp  particles_kernel.cuh  particles_kernel_device.cuh
done/smokeParticles/reports/: porting_analysis.md  profiling_report.md  semantic_fixes.md  translation_summary.md
done/smokeParticles/reports/profile/: counters.txt  counters_tcc.txt
done/smokeParticles/reports/profile/counters_tcc_out/pmc_1/: tcc_results.db
done/smokeParticles/reports/profile/counters_tcc_out/pmc_2/: tcc_results.db
done/smokeParticles/reports/profile/post_fix/: post_fix_results.db
done/smokeParticles/reports/profile/post_fix2/: pf2_results.db
done/smokeParticles/reports/profile/scaling_16384/: scaling_results.db
done/smokeParticles/reports/profile/scaling_32768/: scaling_results.db
done/smokeParticles/reports/profile/scaling_65536/: scaling_results.db
done/smokeParticles/reports/profile/scaling_8192/: scaling_results.db
